<resources>
    <string name="app_name">Fomulario</string>
    <string name="register_form">Formulario de registro</string>
    <string name="name">Nombre</string>
    <string name="Name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="email">Correo Electronico</string>
    <string name="Register">Registrar</string>
    <string name="password">Contraseña</string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="hobbies">Hobbies</string>
    <string name="viajar">Viajar</string>
    <string name="leer">Leer</string>
    <string name="bailar">Bailar</string>
    <string name="pintar">Pintar</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="lugar_nacimiento">Lugar de nacimiento</string>
    <string name="masculino_botton_input">Masculino</string>
    <string name="femenino_botton_input">femenino</string>
    <string name="date">Fecha de nacimiento</string>
    <string name="fecha_text">Fecha de nacimiento</string>
    <string name="info">Nombre: %s\nCorreo Electronico: %s \nContraseña: %s \nGénero: %s \nHobbies: %s \nLugar de nacimiento: %s \nFecha de nacimiento: %s </string>
    <string name="fecha_estructura">dd/MM/yyyy</string>
    <string name="vacio">No puede estar vacio</string>
    <string name="ingresar_campos">Debe ingresar todos los campos</string>
    <string name="ingresar_email">Debe ingresar email</string>
    <string name="digite_nombre">Digite nombre</string>
    <string name="digite_fecha">Digite fecha</string>
    <string name="contraseña_no_coincide">Contraseña no coincide</string>
    <string name="correo_valido">Ingrese correo valido</string>
    <string name="datos_registrados">Datos registrados</string>

    <string-array name="lista_ciudades">
        <item>Medellín</item>
        <item>Calí</item>
        <item>Barranquilla</item>
        <item>Bogotá</item>
        <item>Cartagena</item>
    </string-array>
</resources>